force-app/main/default/objects/Customer_Application_Lawyer__c/Customer_Application_Lawyer__c.object-meta.xml
<CustomObject>
    <label>Customer Application Lawyer</label>
    <nameField>
        <label>Customer Application Lawyer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer Application Lawyers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>