force-app/main/default/objects/Customer_Application_Lawyer__c/fields/ARDC_Number__c.field-meta.xml
<CustomField>
    <fullName>ARDC_Number__c</fullName>
    <label>ARDC Number</label>
    <length>8</length>
    <type>Text</type>
</CustomField>