force-app/main/default/objects/Customer_Application_Lawyer__c/fields/Average_Number_of_Hours_Worked__c.field-meta.xml
<CustomField>
    <fullName>Average_Number_of_Hours_Worked__c</fullName>
    <label>Average Number of Hours Worked</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>