force-app/main/default/objects/Customer_Application_Lawyer__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Customer Application Lawyers</relationshipLabel>
    <relationshipName>Customer_Application_Lawyers</relationshipName>
    <type>Lookup</type>
</CustomField>