force-app/main/default/objects/Customer_Application_Lawyer__c/fields/Customer_Application__c.field-meta.xml
<CustomField>
    <fullName>Customer_Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Application</label>
    <referenceTo>Customer_Application__c</referenceTo>
    <relationshipLabel>Customer Application Lawyers</relationshipLabel>
    <relationshipName>Customer_Application_Lawyers</relationshipName>
    <type>Lookup</type>
</CustomField>