force-app/main/default/objects/Customer_Application_Lawyer__c/fields/Designation__c.field-meta.xml
<CustomField>
    <fullName>Designation__c</fullName>
    <label>Designation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Owner, Officer, or Shareholder</fullName>
            </value>
            <value>
                <fullName>Partner of a Partnership</fullName>
            </value>
            <value>
                <fullName>Associate or Employed Lawyer</fullName>
            </value>
            <value>
                <fullName>Solo Practitioner</fullName>
            </value>
            <value>
                <fullName>Independent Contractor</fullName>
            </value>
            <value>
                <fullName>Of Counsel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>