force-app/main/default/objects/Customer_Application_Lawyer__c/fields/Firm_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Firm_Email_Address__c</fullName>
    <label>Firm Email Address</label>
    <type>Email</type>
</CustomField>