force-app/main/default/objects/Customer_Application_Lawyer__c/fields/Is_Removed__c.field-meta.xml
<CustomField>
    <fullName>Is_Removed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Removed</label>
    <type>Checkbox</type>
</CustomField>