force-app/main/default/objects/Customer_Application_Lawyer__c/fields/ISBA_Number__c.field-meta.xml
<CustomField>
    <fullName>ISBA_Number__c</fullName>
    <label>ISBA Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>