force-app/main/default/objects/Customer_Application_Lawyer__c/fields/Lawyer_Name__c.field-meta.xml
<CustomField>
    <fullName>Lawyer_Name__c</fullName>
    <formula>IF( Name &lt;&gt; null, Name + &apos; &apos; , &apos;&apos;) +  Last_Name__c</formula>
    <label>Lawyer Name</label>
    <type>Text</type>
</CustomField>