force-app/main/default/objects/Customer_Application_Lawyer__c/fields/Personal_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Personal_Email_Address__c</fullName>
    <label>Personal Email Address</label>
    <type>Email</type>
</CustomField>